# sample-code-for-Q-business-custom-plugins

./: .gitignore  Cargo.toml  README.md  openapi.yaml  template.yaml
examples/swag_store/: Cargo.toml  README.md  samconfig.toml  template.yaml
examples/swag_store/src/services/: cart.rs  mod.rs
src/: main.rs  setup.rs  utils.rs
src/lambda/: main.rs
src/lambda/services/: cart.rs  product.rs
src/services/: mod.rs  q.rs
