[package]
name = "rust-microservice"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"



[dependencies]
csv = "1.3.0"
rand = "0.9.0"
aws-sdk-dynamodb = "1.63.0"
serde_json = { version = "1.0.138" }
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version= "1.0.217", features = ["derive"] }
lambda-web = { version = "0.2.1", features=["rocket05"] }
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
uuid = { version = "1.12.1", features = ["v4"] }
image = "0.25.5"
